Always minify CSS by default

--- a/app/views/full-page-examples/campaign-page/index.njk
+++ b/app/views/full-page-examples/campaign-page/index.njk
@@ -20,7 +20,7 @@ notes: >-
 
 {% block head %}
     {{ super() }}
-    <link rel="stylesheet" href="/public/full-page-examples/campaign-page.css">
+    <link rel="stylesheet" href="/public/full-page-examples/campaign-page.min.css">
 {% endblock %}
 
 {% block header %}
