--- a/app/views/full-page-examples/search/index.njk
+++ b/app/views/full-page-examples/search/index.njk
@@ -32,7 +32,7 @@ notes: >-
 
 {% block head %}
   {{ super() }}
-  <link rel="stylesheet" href="/public/full-page-examples/search.css">
+  <link rel="stylesheet" href="/public/full-page-examples/search.min.css">
 {% endblock %}
 
 {% block beforeContent %}
