--- a/app/views/layouts/_generic.njk
+++ b/app/views/layouts/_generic.njk
@@ -12,17 +12,17 @@
     <link rel="stylesheet" media="print" href="/vendor/govuk_template/stylesheets/govuk-template-print.css">
     <link rel="stylesheet" media="all" href="/vendor/govuk_template/stylesheets/fonts.css"/>
     <!--[if !IE 8]><!-->
-      <link rel="stylesheet" href="/public/app-legacy.css">
+      <link rel="stylesheet" href="/public/app-legacy.min.css">
     <!--<![endif]-->
     <!--[if IE 8]>
-      <link rel="stylesheet" href="/public/app-legacy-ie8.css">
+      <link rel="stylesheet" href="/public/app-legacy-ie8.min.css">
     <![endif]-->
   {% else %}
     <!--[if !IE 8]><!-->
-      <link rel="stylesheet" href="/public/app.css">
+      <link rel="stylesheet" href="/public/app.min.css">
     <!--<![endif]-->
     <!--[if IE 8]>
-      <link rel="stylesheet" href="/public/app-ie8.css">
+      <link rel="stylesheet" href="/public/app-ie8.min.css">
     <![endif]-->
   {% endif %}
 
