--- a/app/views/layouts/legacy.njk
+++ b/app/views/layouts/legacy.njk
@@ -9,10 +9,10 @@
 
 {% block head %}
   <!--[if !IE 8]><!-->
-    <link rel="stylesheet" href="/public/app-legacy.css">
+    <link rel="stylesheet" href="/public/app-legacy.min.css">
   <!--<![endif]-->
   <!--[if IE 8]>
-    <link rel="stylesheet" href="/public/app-legacy-ie8.css">
+    <link rel="stylesheet" href="/public/app-legacy-ie8.min.css">
   <![endif]-->
 {% endblock %}
 
