--- a/app/views/tests/boilerplate.njk
+++ b/app/views/tests/boilerplate.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Test Boilerplate</title>
-    <link rel="stylesheet" href="/public/app.css">
+    <link rel="stylesheet" href="/public/app.min.css">
   </head>
   <body>
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
