Add support for localisation of aria-label specific text for show all button in Accordion component

--- a/app/views/examples/translated/index.njk
+++ b/app/views/examples/translated/index.njk
@@ -944,6 +944,7 @@
         i18n: {
           showAllSections: "Dangos adrannau",
           hideAllSections: "Cuddio adrannau",
+          showAllSectionsAriaLabel: "Dangos rhannau o’r acordion hwn"
         },
         "i18n.showSection": "Dangos",
         "i18n.showSectionAriaLabel": "Dangos adran",
