--- a/src/govuk/components/hide-this-page/_index.scss
+++ b/src/govuk/components/hide-this-page/_index.scss
@@ -2,8 +2,7 @@
 
 @include govuk-exports("govuk/component/hide-this-page") {
   .govuk-hide-this-page {
-    @include govuk-responsive-padding(8, "bottom");
-    position: sticky;
+    position: fixed;
     z-index: 1000;
     top: 0;
     left: 0;
