Fix Accordion “Show all” button margin at tablet size
Fixes a minor regression in:

* https://github.com/alphagov/govuk-frontend/commit/879e37c85e4ff1156e1febb609afacc4df9de1bd

The bottom margin should be increased at tablet size (not desktop) so it matches up with the “Show all” button font size change

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -79,7 +79,7 @@
       cursor: pointer;
       -webkit-appearance: none;
 
-      @include govuk-media-query ($from: desktop) {
+      @include govuk-media-query ($from: tablet) {
         margin-bottom: 14px;
       }
 
@@ -274,7 +274,7 @@
       padding-bottom: govuk-spacing(3);
       border-bottom: 0;
 
-      @include govuk-media-query ($from: desktop) {
+      @include govuk-media-query ($from: tablet) {
         padding-bottom: govuk-spacing(4);
       }
     }
