Hide Accordion content (again) during `.js-enabled` page load
When loading the Accordion component with JavaScript enabled, this change restores `display: none` on section content

For context, we switched to `display: inherit` previously:
https://github.com/alphagov/govuk-frontend/pull/3053

But for slow-loading pages we saw a visual layout shift as each section flickered closed (from open) after initialisation

We’d like to take another look at how components load in:
https://github.com/alphagov/govuk-frontend/issues/999

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -46,17 +46,18 @@
       padding-top: 0;
     }
 
+    // Hide the body of collapsed sections by default for browsers that lack
+    // support for `content-visibility` paired with [hidden=until-found]
     .govuk-accordion__section-content {
+      display: none;
+
       @include govuk-responsive-padding(3, "top");
       @include govuk-responsive-padding(8, "bottom");
     }
 
-    // Manually apply display: none to browsers that don't have a user agent
-    // style for it, but override it with content-visibility if the browser
-    // supports that instead.
+    // Hide the body of collapsed sections using `content-visibility` to enable
+    // page search within [hidden=until-found] regions where browser supported
     .govuk-accordion__section-content[hidden] {
-      display: none;
-
       @supports (content-visibility: hidden) {
         content-visibility: hidden;
         display: inherit;
@@ -65,6 +66,11 @@
       // Hide the padding of collapsed sections
       padding-top: 0;
       padding-bottom: 0;
+    }
+
+    // Show the body of expanded sections
+    .govuk-accordion__section--expanded .govuk-accordion__section-content {
+      display: block;
     }
 
     .govuk-accordion__show-all {
