Fix Accordion content padding during page load
During a slow page load, the accordion content was briefly visible *without* padding

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -46,21 +46,25 @@
       padding-top: 0;
     }
 
+    .govuk-accordion__section-content {
+      @include govuk-responsive-padding(3, "top");
+      @include govuk-responsive-padding(8, "bottom");
+    }
+
     // Manually apply display: none to browsers that don't have a user agent
     // style for it, but override it with content-visibility if the browser
     // supports that instead.
     .govuk-accordion__section-content[hidden] {
       display: none;
+
       @supports (content-visibility: hidden) {
         content-visibility: hidden;
         display: inherit;
       }
-    }
 
-    // Hide the padding of collapsed sections
-    .govuk-accordion__section--expanded .govuk-accordion__section-content {
-      @include govuk-responsive-padding(8, "bottom");
-      @include govuk-responsive-padding(3, "top");
+      // Hide the padding of collapsed sections
+      padding-top: 0;
+      padding-bottom: 0;
     }
 
     .govuk-accordion__show-all {
