Review app `all.js` script sources now `all.min.js`
We now compile to `all.min.js` to ensure our browser tests can run on minified code

--- a/app/views/examples/template-custom/index.njk
+++ b/app/views/examples/template-custom/index.njk
@@ -129,7 +129,7 @@
 
 {% block bodyEnd %}
   <!-- block:bodyEnd -->
-  <script src="/public/all.js"></script>
+  <script src="/public/all.min.js"></script>
   <script>window.GOVUKFrontend.initAll()</script>
   <!-- endblock:bodyEnd -->
 {% endblock %}
