--- a/app/views/layouts/_generic.njk
+++ b/app/views/layouts/_generic.njk
@@ -50,6 +50,6 @@
     {% include "partials/legacyJavaScript.njk" %}
   {% endif %}
 
-  <script src="/public/all.js"></script>
+  <script src="/public/all.min.js"></script>
   <script>window.GOVUKFrontend.initAll()</script>
 {% endblock %}
