--- a/app/views/examples/scoped-initialisation/index.njk
+++ b/app/views/examples/scoped-initialisation/index.njk
@@ -53,7 +53,7 @@
 {% endblock %}
 
 {% block bodyEnd %}
-  <script src="/public/all.js"></script>
+  <script src="/public/all.min.js"></script>
   <script>
     var $scope = document.getElementById('scoped')
     window.GOVUKFrontend.initAll({
