--- a/app/views/examples/template-default/index.njk
+++ b/app/views/examples/template-default/index.njk
@@ -20,6 +20,6 @@
 
 
 {% block bodyEnd %}
-  <script src="/public/all.js"></script>
+  <script src="/public/all.min.js"></script>
   <script>window.GOVUKFrontend.initAll()</script>
 {% endblock %}
