--- a/app/views/layouts/legacy.njk
+++ b/app/views/layouts/legacy.njk
@@ -22,6 +22,6 @@
 
 {% block body_end %}
   {% include "partials/legacyJavaScript.njk" %}
-  <script src="/public/all.js"></script>
+  <script src="/public/all.min.js"></script>
   <script>window.GOVUKFrontend.initAll()</script>
 {% endblock %}
