--- a/app/views/tests/boilerplate.njk
+++ b/app/views/tests/boilerplate.njk
@@ -12,6 +12,6 @@
       Used during testing to inject rendered components and test specific configurations
     </p>
     <div id="slot"></div>
-    <script src="/public/all.js"></script>
+    <script src="/public/all.min.js"></script>
 	</body>
 </html>
