--- a/src/govuk/components/task-list/template.njk
+++ b/src/govuk/components/task-list/template.njk
@@ -6,7 +6,7 @@
     {% endif %}
     {%- set statusId = idPrefix + "-" + loop.index + "-status" -%}
     <li class="govuk-task-list__item{% if item.href %} govuk-task-list__item--with-link{% endif %}">
-      <span class="govuk-task-list__task-name-and-hint">
+      <div class="govuk-task-list__task-name-and-hint">
         {% if item.href %}
           <a class="govuk-link govuk-task-list__link" href="{{ item.href }}" aria-describedby="{{ hintId + " " if item.hint }}{{ statusId }}">{{ item.title.html | safe if item.title.html else item.title.text }}</a>
         {% else %}
@@ -17,12 +17,12 @@
             {{ item.hint.html | safe if item.hint.html else item.hint.text }}
           </div>
         {% endif %}
-      </span>
-      <span class="govuk-task-list__status-container">
+      </div>
+      <div class="govuk-task-list__status-container">
         <span id="{{ statusId }}" class="govuk-task-list__status {{ item.status.classes }}">
           {{ item.status.text }}
         </span>
-      </span>
+      </div>
     </li>
   {% endfor %}
 </ul>
