Add disabled styles to form control components
Add disabled styles for Input, Textarea, Select and File Upload components.

--- a/src/govuk/components/select/_index.scss
+++ b/src/govuk/components/select/_index.scss
@@ -41,6 +41,11 @@
         border-width: $govuk-border-width-form-element * 2;
       }
     }
+
+    &:disabled {
+      opacity: .5;
+      color: inherit;
+    }
   }
 
   .govuk-select option:active,
