--- a/src/govuk/objects/_template.scss
+++ b/src/govuk/objects/_template.scss
@@ -12,6 +12,14 @@
     // would like the browser to stay on 100% text zoom by default.
     text-size-adjust: 100%;
 
+    @supports (position: sticky) {
+      scroll-padding-top: 4rem;
+
+      &:not(:has(.govuk-exit-this-page)) {
+        scroll-padding-top: 0;
+      }
+    }
+
     // Force the scrollbar to always display in IE, to prevent horizontal page
     // jumps as content height changes (e.g. autocomplete results open).
     @include govuk-media-query($media-type: screen) {
