Add not-allowed cursor style to disabled inputs

--- a/src/govuk/components/button/_index.scss
+++ b/src/govuk/components/button/_index.scss
@@ -173,7 +173,7 @@ $govuk-button-text-colour: govuk-colour("white") !default;
 
     &:hover {
       background-color: $govuk-button-colour;
-      cursor: default;
+      cursor: not-allowed;
     }
 
     &:active {
