--- a/app/views/layouts/_generic.njk
+++ b/app/views/layouts/_generic.njk
@@ -27,8 +27,9 @@
   {% endif %}
 
   <!--[if !IE 8]><!-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css" integrity="sha256-vtR0hSWRc3Tb26iuN2oZHt3KRUomwTufNIf5/4oeCyg=" crossorigin="anonymous" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js" integrity="sha256-Zb9yKJ/cfs+jG/zIOFL0QEuXr2CDKF7FR5YBJY3No+c=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/vendor/prismjs/themes/prism.min.css">
+    <script src="/vendor/prismjs/components/prism-core.min.js"></script>
+    <script src="/vendor/prismjs/plugins/autoloader/prism-autoloader.min.js"></script>
   <!--<![endif]-->
   <!--[if lt IE 9]>
     <script src="/vendor/html5-shiv/html5shiv.min.js"></script>
