--- a/app/views/layouts/layout.njk
+++ b/app/views/layouts/layout.njk
@@ -11,10 +11,10 @@
 {% block bodyEnd %}
   {{ super() }}
   {% block scripts %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.15/iframeResizer.min.js" integrity="sha256-NZjCYaMfryuJQRMgekHuC02c/Wv4sMRzHG2zyhrVwKU=" crossorigin="anonymous"></script>
-    <!--[if lte IE 8]>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.15/ie8.polyfils.min.js"></script>
+    <!--[if lt IE 9]>
+      <script src="/vendor/iframe-resizer/ie8.polyfils.min.js"></script>
     <![endif]-->
+    <script src="/vendor/iframe-resizer/iframeResizer.min.js"></script>
     <script>
       window.iFrameResize({}, '.js-component-preview')
     </script>
