Use `highlight.js` (server-side) code syntax highlighting
The review app now matches the GOV.UK Design System code snippets (with keyboard focus + scrolling)

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -3,5 +3,6 @@ $govuk-new-link-styles: true;
 
 @import "../../src/govuk/all";
 @import "partials/app";
+@import "partials/code";
 @import "partials/banner";
 @import "partials/prose";
