--- a/src/govuk/components/exit-this-page/_index.scss
+++ b/src/govuk/components/exit-this-page/_index.scss
@@ -82,6 +82,8 @@
       padding: 0 govuk-spacing(1);
       border: 1px solid $govuk-border-colour;
       border-radius: 4px;
+      background-color: govuk-colour("white");
+      box-shadow: 0 1px 0 govuk-colour("white"), 0 2px 0 $govuk-border-colour;
     }
 
     @include govuk-media-query($from: tablet) {
