--- a/app/views/full-page-examples/search/index.njk
+++ b/app/views/full-page-examples/search/index.njk
@@ -57,7 +57,7 @@ notes: >-
     id: "search",
     name: "search",
     classes: "govuk-!-width-two-thirds",
-    value: "driving"
+    value: values.search
   }) }}
 
   <div class="govuk-grid-row">
@@ -81,20 +81,18 @@ notes: >-
           items: [
             {
               value: "hmrc",
-              text: "HM Revenue and Customs (HMRC)",
-              checked: values["organisation"]|length and "hmrc" in values["organisation"]
+              text: "HM Revenue and Customs (HMRC)"
             },
             {
               value: "employment-tribunal",
-              text: "Employment Tribunal",
-              checked: values["organisation"]|length and "employment-tribunal" in values["organisation"]
+              text: "Employment Tribunal"
             },
             {
               value: "mod",
-              text: "Ministry of Defence",
-              checked: values["organisation"]|length and "mod" in values["organisation"]
+              text: "Ministry of Defence"
             }
-          ]
+          ],
+          values: values["organisation"]
         }) }}
 
         {{ govukButton({
@@ -110,24 +108,28 @@ notes: >-
       <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible govuk-!-margin-bottom-3">
       <div class="app-search-result-sort">
         {{ govukSelect({
-          id: "sort",
-          name: "sort",
+          id: "order",
+          name: "order",
+          value: values.order,
           classes: "app-search-result-sort",
           label: {
             text: "Sort by"
           },
           items: [
             {
+              value: "most-viewed",
+              text: "Most viewed"
+            },
+            {
               value: "relevance",
               text: "Relevance"
             },
             {
-              value: "updated-new",
-              text: "Updated (newest)",
-              selected: true
+              value: "updated-newest",
+              text: "Updated (newest)"
             },
             {
-              value: "updated-old",
+              value: "updated-oldest",
               text: "Updated (oldest)"
             }
           ]
