--- a/src/govuk/components/exit-this-page/_index.scss
+++ b/src/govuk/components/exit-this-page/_index.scss
@@ -82,6 +82,7 @@
       border-radius: 4px;
       background-color: govuk-colour("white");
       box-shadow: 0 1px 0 govuk-colour("white"), 0 2px 0 $govuk-border-colour;
+      white-space: nowrap;
     }
 
     @include govuk-media-query($from: tablet) {
